gitops/microservice-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-deployment-production
  namespace: production
spec:
  selector:
    matchLabels:
      app: microservice
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: microservice
    spec:
      containers:
      - name: microservice
        image: fallmann/cloud-native-microservice:1.0.0
        ports:
        - containerPort: 3000
          name: http-web-svc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-deployment-staging
  namespace: staging
spec:
  selector:
    matchLabels:
      app: microservice
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: microservice
    spec:
      containers:
      - name: microservice
        image: fallmann/cloud-native-microservice:latest
        ports:
        - containerPort: 5000
          name: http-web-svc
