gitops/microservice-service.yml
apiVersion: v1
kind: Service
metadata:
  name: microservice-service-production
  namespace: production
spec:
  selector:
    app.kubernetes.io/name: microservice-production
  ports:
  - name: name-of-service-port
    protocol: TCP
    port: 80
    targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: microservice-service-staging
  namespace: staging
spec:
  selector:
    app.kubernetes.io/name: microservice-staging
  ports:
  - name: name-of-service-port
    protocol: TCP
    port: 80
    targetPort: 5000
