gitops/ingress.yaml
# apiVersion: networking.k8s.io/v1beta1 # for k3s < v1.19
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservice
  namespace: production
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /microservice-production
        pathType: Prefix
        backend:
          service:
            name: microservice-service
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservice
  namespace: production
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /microservice-staging
        pathType: Prefix
        backend:
          service:
            name: microservice-service-staging
            port:
              number: 80
